--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -98,7 +98,7 @@
             clientSecret: '{{ site.gitalk.clientSecret }}',
             repo: '{{ site.gitalk.repo }}',
             owner: '{{ site.gitalk.owner }}',
-            admin: ['{{ site.gitalk.owner }}'],
+            admin: ['{{ site.gitalk.admin }}'],
             labels: ['gitment'],
             perPage: 50,
         });
